--- a/src/components/Skills/SkillsIconContainer.css
+++ b/src/components/Skills/SkillsIconContainer.css
@@ -1,6 +1,6 @@
 .SkillsIconContainer {
-    width: 100%;
-    padding: 25%;
+    width: 65%;
+    padding: 15%;
     height: fit-content;
     border-radius: 15px;
     background-color: #1C2541;
@@ -9,6 +9,8 @@
     font-family: BungeeShade ;
     font-size: 2.5vh;
     text-align: center;
+    margin: auto;
+     
          
 }
 
@@ -32,6 +34,6 @@
 }
 
 .SkillIcon:hover {
-    animation: SkillIconSpin 2s infinite;
+    animation: SkillIconSpin 2s forwards;
 }
  
